Finalizações do projeto

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-#.env file / o arquivo env não sobe para o git, sendo bom para colocar a senha e email do link do repositório do mongodb altas
-REACT_APP_BACKEND=http://10.139.75.62:8080/
+#.env file
+REACT_APP_BACKEND=http://10.139.75.46:8080/
